[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/Control.gd" type="Script" id=1]
[ext_resource path="res://image/goldcoin/icoin.png" type="Texture" id=2]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://image/silvercoin/icon.png" type="Texture" id=4]
[ext_resource path="res://image/icono.png" type="Texture" id=5]
[ext_resource path="res://image/invisibleicon.png" type="Texture" id=6]
[ext_resource path="res://image/lifeicon.png" type="Texture" id=7]
[ext_resource path="res://image/bicon.png" type="Texture" id=8]
[ext_resource path="res://image/time.png" type="Texture" id=9]
[ext_resource path="res://digital-7.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://image/reicon.png" type="Texture" id=11]
[ext_resource path="res://image/reiconpressd.png" type="Texture" id=12]
[ext_resource path="res://image/backbpressedd.png" type="Texture" id=13]
[ext_resource path="res://image/backbpressed.png" type="Texture" id=14]
[ext_resource path="res://cry.tscn" type="PackedScene" id=15]
[ext_resource path="res://image/gameover.png" type="Texture" id=16]
[ext_resource path="res://image/guide2.png" type="Texture" id=17]

[sub_resource type="Theme" id=1]

Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 3 )
Label/styles/normal = null
_sections_unfolded = [ "Label", "Label/fonts" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 30
use_mipmaps = true
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Control" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 405.0
margin_top = 6.0
margin_right = 1055.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer2/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer2/HBoxContainer/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = 12.0
margin_right = 37.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Margin" ]

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer2/HBoxContainer/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 4.0
margin_right = 50.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Margin" ]

[node name="Label1" type="Label" parent="HBoxContainer2/HBoxContainer/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 34.0
margin_top = 9.0
margin_right = 114.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer2" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 204.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer2/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer2/HBoxContainer2/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = 12.0
margin_right = 37.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Margin" ]

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer2/HBoxContainer2/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 4.0
margin_right = 50.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Margin" ]

[node name="Label2" type="Label" parent="HBoxContainer2/HBoxContainer2/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 49.0
margin_top = 9.0
margin_right = 111.0
margin_bottom = 53.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_right = 308.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer2/HBoxContainer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Pshield" type="TextureButton" parent="HBoxContainer2/HBoxContainer3/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 4.0
margin_right = 50.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="Label3" type="Label" parent="HBoxContainer2/HBoxContainer3/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 9.0
margin_right = 112.0
margin_bottom = 58.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_right = 412.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer2/HBoxContainer4" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Pinvisible" type="TextureButton" parent="HBoxContainer2/HBoxContainer4/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 4.0
margin_right = 50.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="Label4" type="Label" parent="HBoxContainer2/HBoxContainer4/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_top = 9.0
margin_right = 107.0
margin_bottom = 57.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer2" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 416.0
margin_right = 516.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer2/HBoxContainer5" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Plife" type="TextureButton" parent="HBoxContainer2/HBoxContainer5/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 4.0
margin_right = 80.0
margin_bottom = 64.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Textures" ]

[node name="Label5" type="Label" parent="HBoxContainer2/HBoxContainer5/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_top = 9.0
margin_right = 129.0
margin_bottom = 55.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="HBoxContainer6" type="HBoxContainer" parent="HBoxContainer2" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 520.0
margin_right = 620.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer2/HBoxContainer6" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Play" type="TextureButton" parent="HBoxContainer2/HBoxContainer6/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 10.0
margin_right = 101.0
margin_bottom = 70.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Textures" ]

[node name="HBoxContainer6" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_top = 7.0
margin_right = 256.0
margin_bottom = 67.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer6" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer6/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = -1.0
margin_right = 77.0
margin_bottom = 59.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
stretch_mode = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Label1" type="Label" parent="HBoxContainer6/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 15.0
margin_right = 110.0
margin_bottom = 55.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "custom_fonts" ]

[node name="Label2" type="Label" parent="HBoxContainer6/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 15.0
margin_right = 130.0
margin_bottom = 56.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = ":"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "custom_fonts" ]

[node name="Label3" type="Label" parent="HBoxContainer6/Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 15.0
margin_right = 157.0
margin_bottom = 57.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "custom_fonts" ]

[node name="Label4" type="Label" parent="HBoxContainer6/Container" index="4"]

modulate = Color( 0.159848, 0.988281, 0.0154419, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_top = 15.0
margin_right = 191.0
margin_bottom = 57.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "/"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "Visibility", "custom_fonts" ]

[node name="HBoxContainer7" type="HBoxContainer" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 242.0
margin_top = 7.0
margin_right = 342.0
margin_bottom = 68.0
rect_min_size = Vector2( 100, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Container" type="Container" parent="HBoxContainer7" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 61.0
rect_min_size = Vector2( 50, 49 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label1" type="Label" parent="HBoxContainer7/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 15.0
margin_right = 110.0
margin_bottom = 55.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "custom_fonts" ]

[node name="Label2" type="Label" parent="HBoxContainer7/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 15.0
margin_right = 130.0
margin_bottom = 56.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = ":"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "custom_fonts" ]

[node name="Label3" type="Label" parent="HBoxContainer7/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 15.0
margin_right = 157.0
margin_bottom = 57.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Theme", "custom_fonts" ]

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Container" type="Container" parent="." index="4"]

visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -100.0
margin_right = 60.0
margin_bottom = -50.0
rect_min_size = Vector2( 120, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="TextureButton" type="TextureButton" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_right = 50.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton2" type="TextureButton" parent="Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_right = 160.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Node2D" parent="Container" index="2" instance=ExtResource( 15 )]

position = Vector2( 66, -322 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Container" index="3"]

position = Vector2( 66, -148 )
texture = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 512, 332 )
texture = ExtResource( 17 )

[connection signal="button_down" from="HBoxContainer2/HBoxContainer3/Container/Pshield" to="." method="_on_Pshield_button_down"]

[connection signal="button_up" from="HBoxContainer2/HBoxContainer3/Container/Pshield" to="." method="_on_Pshield_button_up"]

[connection signal="button_down" from="HBoxContainer2/HBoxContainer4/Container/Pinvisible" to="." method="_on_Pinvisible_button_down"]

[connection signal="button_up" from="HBoxContainer2/HBoxContainer4/Container/Pinvisible" to="." method="_on_Pinvisible_button_up"]

[connection signal="button_down" from="HBoxContainer2/HBoxContainer5/Container/Plife" to="." method="_on_Plife_button_down"]

[connection signal="button_up" from="HBoxContainer2/HBoxContainer5/Container/Plife" to="." method="_on_Plife_button_up"]

[connection signal="pressed" from="HBoxContainer2/HBoxContainer6/Container/Play" to="." method="_on_Play_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="Container/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="Container/TextureButton2" to="." method="_on_TextureButton2_pressed"]


